
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Fixed bug in template viewer for package browser that wasnt paginating right
- Added modRestServer for generic REST request handling
- Enable remote sorting and sorting by ID on Users grid
- Fixed and enhanced search field on Users grid
- Fixed bug with duplicating a context where only the first level would duplicate
- Updated to xPDO 2.0 revision 396
- Fixed bug where package version info wasnt being computed on download/scanlocal
- Added check for locked status on resources, now shows locked status in tree, as well as who is editing
- [#MODX-1592] Fixed bug with usergroup create by moving it to a window
- [#MODX-1590] Fixed missing processors for ACL grids
- [#MODX-1526] Added permissions resource_tree, element_tree, file_tree that restrict rendering/viewing of the left-side trees. Must be applied to access policies.
- [#MODX-625] Adjusted text in config.inc.php writable warning message
- [#MODX-1586] Fixed toolbar rendering bug in user settings due to hidden div, now using hideMode: offsets 
- Added search for user box in usergroup users grid
- Changed User Group users grid to a non-local grid, now supports pagination and proper validation
- Enhanced UI for editing User Group Context/ResourceGroup ACLs
- [#MODX-1525] Added permissions field to modMenu to define policy permissions required to see Top Menu items
- Fixed bug in Packages grid to properly show provider name
- Added modRestResponse class, improved error handling for REST-based package management
- Added verification for Providers, now check to make sure they can connect before being added or updated