@@ -12,7 +12,7 @@ $acl = $modx->getObject('modAccessResourceGroup',$_POST['id']);
 if (empty($acl)) return $modx->error->failure($modx->lexicon('acl_err_nf'));
 
 /* validate for empty fields */
-if (empty($_POST['principal'])) $modx->error->addField('principal',$modx->lexicon('usergroup_err_ns'));
+if (!isset($_POST['principal'])) $modx->error->addField('principal',$modx->lexicon('usergroup_err_ns'));
 if (empty($_POST['target'])) $modx->error->addField('target',$modx->lexicon('context_err_ns'));
 if (empty($_POST['policy'])) $modx->error->addField('policy',$modx->lexicon('access_policy_err_ns'));
 if (!isset($_POST['authority'])) $modx->error->addField('authority',$modx->lexicon('authority_err_ns'));
@@ -20,9 +20,6 @@ if (!isset($_POST['authority'])) $modx->error->addField('authority',$modx->lexic
 if ($modx->error->hasError()) return $modx->error->failure();
 
 /* validate for invalid data */
-$usergroup = $modx->getObject('modUserGroup',$_POST['principal']);
-if (empty($usergroup)) $modx->error->addField('principal',$modx->lexicon('user_group_err_nf'));
-
 $resourceGroup = $modx->getObject('modResourceGroup',$_POST['target']);
 if (empty($resourceGroup)) $modx->error->addField('target',$modx->lexicon('resource_group_err_nf'));
 
